--- a/login.html
+++ b/login.html
@@ -63,6 +63,9 @@
             font-size: 16px;
             font-weight: 600;
             transition: background-color 0.3s;
+            text-decoration: none;
+            display: block;
+            text-align: center;
         }
         .btn-login:hover { 
             background-color: #0056b3; 
@@ -95,10 +98,10 @@
                 <input type="password" id="password" name="password">
             </div>
 
-            <button type="button" class="btn-login">Iniciar Sesión</button>
+            <a href="estadistica.html" class="btn-login">Iniciar Sesión</a>
 
             <div class="link-footer">
-                <a href="#">¿Olvidó su contraseña?</a> | <a href="#">Registrarse</a>
+                <a href="#">¿Olvidó su contraseña?</a> | <a href="registro.html">Registrarse</a>
             </div>
         </form>
     </div>
