--- a/pedidos.html
+++ b/pedidos.html
@@ -81,14 +81,14 @@
         <h1 class="logo">Fábrica de Quesos: Administración Central</h1>
         <nav class="main-menu">
             <ul>
-                <<li><a href="w.html">Inventario (Quesos/Materia Prima)</a></li>
-                <li><a href="pedidos.html">Pedidos Sucursales</a></li>
-                <li><a href="z.html">Recetas/Catálogo</a></li>
-                <li><a href="Y.html">Socios/Usuarios</a></li>
-                <li><a href="A.html">Estadistica</a></li>
+                <li><a href="inventario.html">Inventario (Quesos/Materia Prima)</a></li>
+                <li><a href="pedidos.html" class="active">Pedidos Sucursales</a></li>
+                <li><a href="catalogo.html">Recetas/Catálogo</a></li>
+                <li><a href="usuarios.html">Socios/Usuarios</a></li>
+                <li><a href="estadisticas.html">Estadistica</a></li>
             </ul>
         </nav>
-        <div class="user-info">Bienvenido, Maestro Quesero | <a href="Index.html">Cerrar Sesión</a></div>
+        <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
     </header>
 
     <main class="content-area">
