--- a/inventario.html
+++ b/inventario.html
@@ -42,7 +42,7 @@ con <!DOCTYPE html>
             <li><a href="inventario.html" class="active">Inventario (Quesos/Materia Prima)</a></li>
             <li><a href="pedidos.html">Pedidos Sucursales</a></li>
             <li><a href="catalogo.html">Recetas/Catálogo</a></li>
-            <li><a href="usuarios.html">Socios/Usuarios</a></li>
+            <li><a href="socios.html">Socios/Usuarios</a></li>
             <li><a href="estadisticas.html">Estadistica</a></li>
         </ul>
     </nav>
