--- a/socios.html
+++ b/socios.html
@@ -37,7 +37,8 @@
             <li><a href="inventario.html">Inventario</a></li>
             <li><a href="pedidos.html">Pedidos Sucursales</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
-            <li><a href="usuarios.html" class="active">Socios</a></li>
+            <li><a href="socios.html">Socios/Usuarios</a></li>
+            <li><a href="estadisticas.html">Estadistica</a></li>
         </ul>
     </nav>
     <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
