--- a/inventario.html
+++ b/inventario.html
@@ -43,7 +43,7 @@ con <!DOCTYPE html>
             <li><a href="pedidos.html">Pedidos Sucursales</a></li>
             <li><a href="catalogo.html">Recetas/Catálogo</a></li>
             <li><a href="socios.html">Socios/Usuarios</a></li>
-            <li><a href="estadisticas.html">Estadistica</a></li>
+            <li><a href="estadistica.html">Estadistica</a></li>
         </ul>
     </nav>
     <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
