--- a/catalogo.html
+++ b/catalogo.html
@@ -39,7 +39,7 @@
             <li><a href="pedidos.html">Pedidos Sucursales</a></li>
             <li><a href="catalogo.html" class="active">Recetas/Catálogo</a></li>
             <li><a href="socios.html">Socios/Usuarios</a></li>
-            <li><a href="estadisticas.html">Estadistica</a></li>
+            <li><a href="estadistica.html">Estadistica</a></li>
         </ul>
     </nav>
     <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
