--- a/estadistica.html
+++ b/estadistica.html
@@ -151,7 +151,7 @@
                 <li><a href="pedidos.html">Pedidos Sucursales</a></li>
                 <li><a href="catalogo.html">Recetas/Catálogo</a></li>
                 <li><a href="socios.html">Socios/Usuarios</a></li>
-                <li><a href="estadisticas.html" class="active">Estadistica</a></li>
+                <li><a href="estadistica.html" class="active">Estadistica</a></li>
             </ul>
         </nav>
         <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
