--- a/socios.html
+++ b/socios.html
@@ -38,7 +38,7 @@
             <li><a href="pedidos.html">Pedidos Sucursales</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
             <li><a href="socios.html">Socios/Usuarios</a></li>
-            <li><a href="estadisticas.html">Estadistica</a></li>
+            <li><a href="estadistica.html">Estadistica</a></li>
         </ul>
     </nav>
     <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
