--- a/login.html
+++ b/login.html
@@ -1,110 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
-    <style>
-        body { 
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
-            min-height: 100vh; 
-            background-color: #f8f9fa; 
-            margin: 0; 
-        }
-        .access-container { 
-            background: white; 
-            padding: 40px; 
-            border-radius: 8px; 
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); 
-            width: 350px; 
-        }
-        .access-container h2 { 
-            text-align: center; 
-            color: #343a40; 
-            margin-bottom: 10px; 
-        }
-        .access-container p {
-            text-align: center; 
-            color: #6c757d;
-            margin-bottom: 30px;
-        }
-        .form-group { 
-            margin-bottom: 20px; 
-        }
-        .form-group label { 
-            display: block; 
-            margin-bottom: 8px; 
-            font-weight: 600; 
-            color: #495057; 
-        }
-        .form-group input { 
-            width: 100%; 
-            padding: 12px; 
-            border: 1px solid #ced4da; 
-            border-radius: 4px; 
-            box-sizing: border-box; 
-            transition: border-color 0.3s;
-        }
-        .form-group input:focus {
-            border-color: #007bff;
-            outline: none;
-        }
-        .btn-login { 
-            width: 100%; 
-            padding: 12px; 
-            background-color: #007bff; 
-            color: white; 
-            border: none; 
-            border-radius: 4px; 
-            cursor: pointer; 
-            font-size: 16px;
-            font-weight: 600;
-            transition: background-color 0.3s;
-            text-decoration: none;
-            display: block;
-            text-align: center;
-        }
-        .btn-login:hover { 
-            background-color: #0056b3; 
-        }
-        .link-footer { 
-            text-align: center; 
-            margin-top: 25px; 
-            font-size: 0.9em;
-        }
-        .link-footer a {
-            color: #007bff;
-            text-decoration: none;
-            margin: 0 5px;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Login - Admin</title>
+  <style>
+    body{font-family:Arial, sans-serif;background:#f5f5f5;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
+    .box{background:#fff;padding:24px;border-radius:8px;width:340px;box-shadow:0 0 10px rgba(0,0,0,0.1)}
+    input{width:100%;padding:10px;margin:8px 0;border:1px solid #ccc;border-radius:4px;box-sizing:border-box}
+    .btn{width:100%;padding:12px;background:green;color:#fff;border:none;border-radius:4px;cursor:pointer;font-size:16px}
+    .btn:hover{background:darkgreen}
+    .error{color:#a00;font-size:0.9rem;margin:8px 0}
+    a{display:block;text-align:center;margin-top:10px;color:#007bff;text-decoration:none}
+    a:hover{text-decoration:underline}
+  </style>
 </head>
 <body>
+  <div class="box">
+    <h2>Iniciar sesión</h2>
+    <div id="error" class="error" aria-live="polite"></div>
+    <form id="loginForm">
+      <input id="email" type="email" placeholder="Correo electrónico" required />
+      <input id="password" type="password" placeholder="Contraseña" required />
+      <button class="btn" type="submit">Entrar</button>
+    </form>
+    <a href="registro.html">Crear cuenta</a>
+  </div>
 
-    <div class="access-container">
-        <h2>Acceso de Administradores</h2>
-        <p>Ingrese sus credenciales para acceder al Dashboard.</p>
-
-        <form>
-            <div class="form-group">
-                <label for="email">Correo Electrónico:</label>
-                <input type="text" id="email" name="email">
-            </div>
-            <div class="form-group">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password">
-            </div>
-
-            <a href="estadistica.html" class="btn-login">Iniciar Sesión</a>
-
-            <div class="link-footer">
-                <a href="#">¿Olvidó su contraseña?</a> | <a href="registro.html">Registrarse</a>
-            </div>
-        </form>
-    </div>
-
+  <!-- Firebase y scripts -->
+  <script type="module" src="./login.js"></script>
 </body>
 </html>
