--- a/estadistica.html
+++ b/estadistica.html
@@ -143,6 +143,8 @@
 </head>
 <body>
 
+    <script type="module" src="./protect.js"></script>
+
     <header class="navbar">
         <h1 class="logo">Fábrica de Quesos: Administración Central</h1>
         <nav class="main-menu">
