--- a/inventario.html
+++ b/inventario.html
@@ -1,4 +1,4 @@
-con <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -34,6 +34,8 @@ con <!DOCTYPE html>
 </style>
 </head>
 <body>
+
+    <script type="module" src="./protect.js"></script>
 
 <header class="navbar">
     <h1 class="logo">Fábrica de Quesos: Administración Central</h1>
@@ -135,6 +137,8 @@ con <!DOCTYPE html>
 <footer class="footer">
     <p>© 2025 Fábrica de Quesos [Nombre de la Fábrica] - Control Total de Inventario</p>
 </footer>
+
+    <script type="module" src="./inventario.js"></script>
 
 </body>
 </html>
