--- a/catalogo.html
+++ b/catalogo.html
@@ -31,6 +31,8 @@
 </head>
 <body>
 
+    <script type="module" src="./protect.js"></script>
+
 <header class="navbar">
     <h1 class="logo">Fábrica de Quesos: Administración Central</h1>
     <nav class="main-menu">
@@ -92,6 +94,8 @@
 <footer class="footer">
     <p>© 2025 Fábrica de Quesos [Nombre de la Fábrica] - Control Total de Inventario</p>
 </footer>
+
+    <script type="module" src="./catalogo.js"></script>
 
 </body>
 </html>
