--- a/estadistica.html
+++ b/estadistica.html
@@ -213,5 +213,7 @@
         <p>© 2025 Fábrica de Quesos [Nombre de la Fábrica] - Control Total de Inventario</p>
     </footer>
 
+    <script type="module" src="./estadistica.js"></script>
+
 </body>
 </html>
