--- a/catalogo.html
+++ b/catalogo.html
@@ -44,7 +44,7 @@
             <li><a href="estadistica.html">Estadistica</a></li>
         </ul>
     </nav>
-    <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
+    <div class="user-info">Bienvenido, Maestro Quesero | <a href="javascript:void(0);" onclick="signOutUser()">Cerrar Sesión</a></div>
 </header>
 
 <main class="content-area">
