--- a/estadistica.html
+++ b/estadistica.html
@@ -156,7 +156,7 @@
                 <li><a href="estadistica.html" class="active">Estadistica</a></li>
             </ul>
         </nav>
-        <div class="user-info">Bienvenido, Maestro Quesero | <a href="login.html">Cerrar Sesión</a></div>
+        <div class="user-info">Bienvenido, Maestro Quesero | <a href="javascript:void(0);" onclick="signOutUser()">Cerrar Sesión</a></div>
     </header>
 
     <main class="content-area">
